force-app/main/default/objects/ShippingFee__c/ShippingFee__c.object-meta.xml
<CustomObject>
    <label>運賃</label>
    <nameField>
        <displayFormat>SHF-{00000000}</displayFormat>
        <label>運賃#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>