force-app/main/default/objects/ShippingFee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>価格管理の荷主を設定</description>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ShippingFeeMasterAccount</relationshipName>
    <type>Lookup</type>
</CustomField>