force-app/main/default/objects/ShippingFee__c/fields/AncillaryWorkFee__c.field-meta.xml
<CustomField>
    <fullName>AncillaryWorkFee__c</fullName>
    <label>付帯作業費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>