force-app/main/default/objects/ShippingFee__c/fields/ArrivalCity__c.field-meta.xml
<CustomField>
    <fullName>ArrivalCity__c</fullName>
    <label>市区郡（着地）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>