force-app/main/default/objects/ShippingFee__c/fields/ArrivalStreet__c.field-meta.xml
<CustomField>
    <fullName>ArrivalStreet__c</fullName>
    <label>町村（町名）（着地）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>