force-app/main/default/objects/ShippingFee__c/fields/CargoInsuranceCost__c.field-meta.xml
<CustomField>
    <fullName>CargoInsuranceCost__c</fullName>
    <label>貨物保険料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>