force-app/main/default/objects/ShippingFee__c/fields/CarryOutDate_F__c.field-meta.xml
<CustomField>
    <fullName>CarryOutDate_F__c</fullName>
    <formula>PriceTable__r.CarryOutDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実施日</label>
    <type>Date</type>
</CustomField>