force-app/main/default/objects/ShippingFee__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>着地</label>
    <referenceTo>OriginDestination__c</referenceTo>
    <relationshipName>ShippingFeeDestinationList</relationshipName>
    <type>Lookup</type>
</CustomField>