force-app/main/default/objects/ShippingFee__c/fields/FixedFeeFlag__c.field-meta.xml
<CustomField>
    <fullName>FixedFeeFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>一律料金フラグ</label>
    <type>Checkbox</type>
</CustomField>