force-app/main/default/objects/ShippingFee__c/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <label>最大数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>