force-app/main/default/objects/ShippingFee__c/fields/MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinQuantity__c</fullName>
    <label>最小数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>