force-app/main/default/objects/ShippingFee__c/fields/OriginPrefecture__c.field-meta.xml
<CustomField>
    <fullName>OriginPrefecture__c</fullName>
    <label>都道府県（発地）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>19</fullName>
                <default>true</default>
                <label>山梨県</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>福岡県</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>