force-app/main/default/objects/ShippingFee__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <label>枝番</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>