force-app/main/default/objects/ShippingFee__c/fields/ShippingFee__c.field-meta.xml
<CustomField>
    <fullName>ShippingFee__c</fullName>
    <label>運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>