force-app/main/default/objects/ShippingFee__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>一意キー</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>