force-app/main/default/objects/ShippingFee__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitForShippingFeeCal</valueSetName>
    </valueSet>
</CustomField>