force-app/main/default/objects/ShippingFee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PriceTable__c</columns>
    <columns>OriginPrefecture__c</columns>
    <columns>ShippingFee__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>